# password_generator

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: activate.rs  generate_password.rs  main.rs
