[package]
name = "password_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo = "0.0.4"
pango = "0.18.0"
rand = "0.8.5"
gtk = { git = "https://github.com/gtk-rs/gtk4-rs.git", package = "gtk4" }
gdk = { git = "https://github.com/gtk-rs/gtk4-rs.git", package = "gdk4" }
gio = "0.18.1"
glib = "0.18.1"